text: actually fix overflow

--- a/site/assets/css/default.css
+++ b/site/assets/css/default.css
@@ -125,7 +125,7 @@
   }
 }
 
-html, body {
+body {
   height: 100dvh;
   width: 100dvw;
 }
